fix(footer): align acc to design

--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -3,11 +3,9 @@
 .footer {
   font-family: 'regular';
 	width: 100%;
-	height: 283px;
 	background-color: var(--black);
 	display: flex;
 	flex-direction: column;
-	gap: 20px;
 	align-items: center;
   padding: 64px 160px 24px 160px; 
 }
@@ -15,35 +13,49 @@
 .table {
 	display: flex;
 	width: 100%;
-	justify-content: space-between;
-	align-items: flex-start;
+  flex-direction: row;
+  align-items: flex-start;
+  margin-bottom: 40px;
 }
 
-.table > div {
+.footerContent{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-grow: 1;
+}
+
+.footerContent > div {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  align-content: flex-start;
 	font-weight: 400;
 	font-size: 18px;
 	line-height: 26px;
 	color: var(--white);
-	display: flex;
-	gap: 15px;
-	flex-direction: column;
-  align-items: flex-start;
-  align-content: flex-start;
+	row-gap: 16px;
+  font-family: 'regular';
 }
 
-.table > div> div {
+.logo{
+  margin-right: 132px;
+}
+
+.footerContent > div > div {
 	font-family: 'regular';
 }
 
-.table > div > div:nth-child(2) {
+.footerContent > div > div:nth-child(2) {
 	display: flex;
+  font-family: 'regular';
 	gap: 5px;
   align-content: center;
   align-items: center;
 	width: 100%;
 }
 
-.table > div > div:nth-child(2) > div:nth-child(2) {
+.footerContent > div > div:nth-child(2) > div:nth-child(2) {
   display: flex;
   justify-content: center;
   align-content: center;
@@ -52,10 +64,10 @@
 	height:24px;
   width:24px;
 	border-radius: 50%;
+  font-family: 'regular';
 }
 
 .divider {
-	margin-top: 20px;
 	width: 100%;
 	height: 1px;
   opacity: 0.2;
@@ -70,4 +82,5 @@
 	color: var(--white);
 	font-size: 14px;
 	line-height: 20px;
+  padding-top: 20px;
 }
